<resources>
    <string name="app_name">Rod1Lift</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="activity_login_copyright">\u00A9 Gobin Vijesh (Ashwin) </string>
    <string name="activity_login_view_app">View App</string>
    <string name="activity_login_slogan">Bizin 1 lift?</string>
    <string name="activity_login_select_user_type"> Please select a type of user </string>
    <string name="activity_login_select_user_type_error"> Please select a type of user </string>
    <string name="activity_login_select_type_driver">Car Pooler</string>
    <string name="activity_login_select_type_other"> Car Seeker </string>
    <string name="activity_login_select_type_select"> SELECT </string>
    <string name="activity_complete_driver_registration_header">Car Registration</string>
    <string name="activity_complete_driver_registration_car_details">Car Make</string>
    <string name="activity_complete_driver_registration_year">Year</string>
    <string name="activity_complete_driver_registration_plate_num">Plate No.</string>
    <string name="activity_complete_driver_registration_number_of_passenger">No. Passenger</string>
    <string name="activity_complete_driver_registration_take_picture">Add Image</string>
    <string name="activity_complete_driver_registration_next">Next</string>
    <string name="activity_complete_driver_registration_photo_camera">CAMERA</string>
    <string name="activity_complete_driver_registration_photo_gallery">GALLERY</string>
    <string name="activity_complete_driver_registration_photo_delete_one">DELETE SELECTED</string>
    <string name="activity_complete_driver_registration_photo_delete_all">DELETE ALL</string>
    <string name="activity_complete_driver_registration_photo_delete_one_pop_up">Are you sure you want to delete this picture?</string>
    <string name="activity_complete_driver_registration_photo_delete_all_pop_up">Are you sure you want to delete all pictures?</string>
    <string name="activity_complete_driver_registration_car_details_error">Car Make can not be empty</string>
    <string name="activity_complete_driver_registration_year_error">Year can not be empty</string>
    <string name="activity_complete_driver_registration_plate_num_error">Plate Number can not be empty</string>
    <string name="activity_complete_driver_registration_number_of_passenger_error">Number of Passenger can not be empty</string>
    <string name="activity_complete_driver_registration_image_error">At least one image must be added</string>
    <string name="activity_complete_driver_registration_plate_num_hint">Plate No.</string>
    <string name="activity_complete_driver_registration_delete_picture">Delete Picture</string>
    <string name="activity_create_trip_header">Create Trip</string>
    <string name="activity_create_trip_validation_autocomplete_address">Address can not be null</string>
    <string name="activity_create_trip_validation_date">Date can not be null</string>
    <string name="activity_create_trip_validation_time">Time can not be null</string>
    <string name="activity_create_trip_validation_contact_detail">Contact details can not be null</string>
    <string name="activity_create_trip_validation_contact_detail_length">Phone Num should be of lenght 7 - 8</string>
    <string name="activity_create_trip_validation_autocomplete_address_no_match">Please select address from autocomplete list</string>
    <string name="activity_create_trip_validation_seat_available">Number of seat requested can not be null</string>
    <string name="activity_create_trip_validation_seat_available_length">Number of seat requested should be between 1</string>
    <string name="activity_create_trip_select_date">Select Date</string>
    <string name="activity_create_trip_select_time">Select Time</string>
    <string name="activity_create_trip_confirm_delete">Confirm Delete...</string>
    <string name="activity_create_trip_confirm_delete_message">Are you sure you want delete this trip?</string>
    <string name="activity_create_trip_price">Price</string>
    <string name="activity_create_trip_price_no_client">No one has accepted your request yet!</string>
    <string name="activity_map_marker_title_main_here">You are here</string>
    <string name="activity_map_marker_title_from">Trip starts</string>
    <string name="activity_map_marker_title_to">Trip ends</string>
    <string name="activity_map_marker_create_trip_validation_title">No trip detected!</string>
    <string name="activity_map_marker_create_trip_validation_message">No trip detected. Would you like to create one on the map?</string>
    <string name="activity_search_trip_header">Search Trip</string>
    <string name="activity_search_trip_results_header">Search Results</string>
    <string name="activity_search_trip_search">Search</string>
    <string name="activity_search_trip_validation_autocomplete_address">Address can not be null</string>
    <string name="activity_complete_driver_manage_request_header">Manage Trip</string>
    <string name="activity_driver_history_header">Past Trips</string>
    <string name="activity_driver_view_user_details">Trip Details</string>
    <string name="activity_map_logout_title">Logout</string>
    <string name="activity_map_logout_message">Are you sure you want to logout</string>
    <string name="activity_profile_name_hint">Full Name</string>
    <string name="activity_profile_name_error">Name can not be null</string>
    <string name="activity_send_message_hint">Write Message</string>
    <string name="activity_send_message_send">Send</string>
    <string name="floating_menu_clear_marker">Clear Marker</string>
    <string name="floating_menu_path_from_current_position">Get direction from current position</string>
    <string name="floating_menu_current_position">Locate Me</string>
    <string name="floating_menu_path_from_two_points">Get direction from 2 different points</string>
    <string name="floating_menu_path_create_trip">Create trip</string>
    <string name="floating_menu_path_search_trip">Search trip</string>
    <string name="floating_menu_clear_pending">Upcoming Trip</string>
    <string name="floating_menu_car_full">Trip Full</string>
    <string name="floating_menu_client_accepted">Client Accepted</string>
    <string name="floating_menu_I_accepted">I Accepted</string>
    <string name="floating_menu_i_rejected">I Rejected</string>
    <string name="floating_menu_driver_view_details">View Passengers Details</string>
    <string name="floating_menu_driver_delete_trip">Delete Trip</string>
    <string name="floating_menu_passenger_reserve_seat">No. seats to reserve</string>
    <string name="floating_menu_passenger_call">Call</string>
    <string name="floating_menu_passenger_message">Message</string>
    <string name="async_check_account_validating_account">Validating your account</string>
    <string name="async_create_account_validating_account">Creating your account</string>
    <string name="async_driver_create_car_creating_car_details">Creating your car details</string>
    <string name="async_driver_create_or_update_trip_create_trip">Creating your trip</string>
    <string name="async_driver_create_or_update_trip_update_update">Updating your trip</string>
    <string name="async_driver_delete_trip_delete">Deleting your trip</string>
    <string name="async_passenger_delete_trip_delete">Deleting selected trip</string>
    <string name="async_passenger_accept_trip">Updating selected trip</string>
    <string name="async_passenger_accept_pay_trip">Updating trip</string>
    <string name="async_driver_fetch_car_details">Downloading your data</string>
    <string name="async_driver_fetch_trip_details">Downloading updates</string>
    <string name="async_driver_update_car_details">Updating your car details</string>
    <string name="async_driver_update_account_details">Updating your account details</string>
    <string name="async_driver_fetch_history">Downloading history</string>
    <string name="driver_request_adapter_seats_left">Seats Left</string>
    <string name="driver_request_adapter_seats_requested">Seats Req</string>
    <string name="driver_request_adapter_seat_left">Seat Left</string>
    <string name="driver_request_adapter_no_seat_left">Trip Full</string>
    <string name="passenger_view_history_seat">Seat</string>
    <string name="passenger_view_trip_seat">Seat Avai..</string>
    <string name="async_driver_accept_client_request">Saving Request</string>
    <string name="async_driver_accept_client_request_fail">Car seeker requesting more seats than available</string>
    <string name="menu_edit_profile_header">Edit Profile</string>
    <string name="fb_app_id">708685515985549</string>
    <string name="google_map_api_key">AIzaSyDX9G9kVR8wnf80jbOsHREvlaWozfxZZBM</string>
    <string name="google_places_api_key">AIzaSyDI1_vp2tlrAvOu3tJwVs4IelR501YebRw</string>
    <string name="google_direction_api_key">AIzaSyCitgeLu1T3dKGdGeChux5CaqpWHltwECQ</string>
    <string name="firebase_api_key">AIzaSyDGvGxPJAR2Hw1FQO_0kj8-7yNg2qJQKBQ</string>
    <string name="error_server">An error has occured please try again later</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="error">ERROR</string>
    <string name="ok"> OK </string>
    <string name="cancel"> CANCEL </string>
    <string-array name="carMake">
        <item>TOYOTA</item>
        <item>NISSAN</item>
        <item>KIA</item>
        <item>HONDA</item>
    </string-array>
    <string-array name="carModelToyota">
        <item>YARIS</item>
        <item>COROLLA</item>
        <item>BELTA</item>
        <item>PRIUS</item>
        <item>VITZ</item>
    </string-array>
    <string-array name="carModelNissan">
        <item>ALTIMA</item>
        <item>PULSAR</item>
        <item>PLATINA</item>
        <item>ATLAS</item>
        <item>SENTRA</item>
    </string-array>
    <string-array name="carModelKia">
        <item>OPIRUS</item>
        <item>OPTIMA</item>
        <item>RIO</item>
        <item>PICANTO</item>
    </string-array>
    <string-array name="carModelHonda">
        <item>CIVIC</item>
        <item>BALLADE</item>
        <item>CITY</item>
        <item>ACCORD</item>
        <item>FIT</item>
    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_chat">Message</string>
    <string name="title_activity_chat_hint">Write Message</string>
    <string name="title_activity_passenger_view_driver_profile">Driver\'s Profile</string>
    <string-array name="driver_manage_request_arrays">
        <item>UPCOMING TRIP</item>
        <item>CLIENT ACCEPTED</item>
    </string-array>
    <string-array name="passenger_manage_request_arrays">
        <item>UPCOMING TRIP</item>
        <item>I ACCEPTED</item>
    </string-array>
    <string name="menu_map">MAP</string>
    <string name="menu_create_trip">CREATE TRIP</string>
    <string name="menu_manage_request">MANAGE REQUEST</string>
    <string name="menu_history">HISTORY</string>
    <string name="menu_chat">MESSAGE</string>
    <string name="menu_logout">LOGOUT</string>
    <string name="menu_search_trip">SEARCH TRIP</string>
    <string name="activity_phone_number_hint">Phone Num</string>
    <string name="activity_main_gps_permission_title">Location Permission Needed</string>
    <string name="activity_main_gps_permission_message">"This app needs the Location permission, please accept to use location functionality"</string>
    <string name="activity_passenger_payment_title">Please rate this trip</string>
    <string name="activity_passenger_payment_hint">comment</string>
    <string name="error_no_connection">Please enable your internet connection and retry</string>
    <string name="error_rating">Rating can not be zero</string>
</resources>