<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/icon_map"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_search_trip"
            android:icon="@drawable/icon_search_trip"
            android:title="@string/menu_search_trip" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/icon_manage"
            android:title="@string/menu_manage_request" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/icon_history"
            android:title="@string/menu_history" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/icon_logout"
            android:title="@string/menu_logout" />
    </group>

   <!-- <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
