<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


        <com.github.clans.fab.FloatingActionMenu
            android:foregroundGravity="center"
            xmlns:fab="http://schemas.android.com/apk/res-auto"
            android:id="@+id/fabMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="8dp"
            fab:menu_fab_size="normal"
            fab:menu_showShadow="true"
            fab:menu_shadowColor="#66000000"
            fab:menu_shadowRadius="4dp"
            fab:menu_shadowXOffset="1dp"
            fab:menu_shadowYOffset="3dp"
            fab:menu_animationDelayPerItem="50"
            fab:menu_icon="@drawable/fab_add"
            fab:menu_buttonSpacing="0dp"
            fab:menu_openDirection="up"
            fab:menu_backgroundColor="@android:color/transparent"
            fab:menu_fab_show_animation="@animator/jump_from_down"
            fab:menu_fab_hide_animation="@animator/jump_to_down">

            <com.github.clans.fab.FloatingActionButton
                fab:fab_label="@string/floating_menu_clear_marker"
                fab:fab_size="mini"
                android:src="@drawable/icon_delete"
                android:id="@+id/fabClearMarker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  />

            <com.github.clans.fab.FloatingActionButton
                fab:fab_label="@string/floating_menu_path_create_trip"
                fab:fab_size="mini"
                android:src="@drawable/icon_add_trip_small"
                android:id="@+id/fabCreateTrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  />

            <com.github.clans.fab.FloatingActionButton
                fab:fab_label="@string/floating_menu_path_from_two_points"
                fab:fab_size="mini"
                android:src="@drawable/icon_two_direction"
                android:id="@+id/fabPathFromTwoPoints"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  />


            <com.github.clans.fab.FloatingActionButton
                fab:fab_label="@string/floating_menu_path_from_current_position"
                fab:fab_size="mini"
                android:src="@drawable/icon_current_position"
                android:id="@+id/fabPathFromCurrentPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"  />

        </com.github.clans.fab.FloatingActionMenu>


</FrameLayout>
