<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black_50">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

    <LinearLayout
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/gradient_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical">

       <TextView
           android:layout_weight="0.2"
           android:layout_margin="5dp"
           android:textColor="@color/black"
           android:gravity="center"
           android:textSize="25dp"
           android:textStyle="bold"
           android:layout_width="match_parent"
           android:layout_height="0dp"
           android:text="@string/activity_passenger_payment_title"/>

        <RatingBar
            android:theme="@style/RatingBar"
            android:layout_weight="0.2"
            android:layout_gravity="center"
            android:id="@+id/rating"
            android:layout_margin="5dp"
            android:stepSize="0.5"
            android:max="5"
            android:rating="4.0"
            android:gravity="center"
            android:isIndicator="false"
            android:layout_width="wrap_content"
            android:layout_height="0dp" />

        <EditText
            android:layout_weight="0.3"
            android:id="@+id/eTxtComment"
            android:layout_margin="5dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:textSize="25dp"
            android:textStyle="bold"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:hint="@string/activity_passenger_payment_hint"/>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_weight="0.2"
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <TextView
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:textColor="@color/white"
                android:gravity="center"
                android:textSize="30dp"
                android:text="@string/ok"
                android:layout_margin="10dp"
                android:background="@drawable/border_white"
                android:id="@+id/txtDone"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" />

</LinearLayout>